--- a/LESS/index.less
+++ b/LESS/index.less
@@ -3,6 +3,8 @@
 @import './reset.less';
 @import './header.less';
 @import './global.less';
+@import './body-content.less';
+@import './footer.less';
 
 section {
     border: 1px solid red;
