--- a/LESS/header.less
+++ b/LESS/header.less
@@ -30,6 +30,7 @@
                     color: @guidr-pink;
                     background-color: white;
                     border: 2px solid @guidr-orange; 
+                    filter: drop-shadow(1px 1px 1px @guidr-pink);
 
                     &:hover {
                         background-color: @guidr-orange;
