--- a/LESS/variables.less
+++ b/LESS/variables.less
@@ -11,4 +11,4 @@
 //tablet and desktop
 
 @tablet: ~"(min-width: 500px)";
-@desktop: ~"(min-width 800px)";
+@desktop: ~"only screen and (min-width 800px) and (max-width: 1200px)";
