--- a/LESS/global.less
+++ b/LESS/global.less
@@ -14,7 +14,7 @@ html {
 
 html, body {
     font-family: 'Rubik', sans-serif;
-    margin: 0 1%;
+    margin: 0 auto;
 }
 
 /*Need to add Noteworthy font-family to h1-5 tags*/
