--- a/LESS/index.less
+++ b/LESS/index.less
@@ -3,6 +3,7 @@
 @import './reset.less';
 @import './header.less';
 @import './global.less';
+@import './carousel.less';
 @import './body-content.less';
 @import './footer.less';
 
