--- a/LESS/footer.less
+++ b/LESS/footer.less
@@ -24,8 +24,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        padding-top:10px;
         h3 {
-        font-size: 1.6rem;
+        font-size: 1.2rem;
         color: @guidr-orange;
         filter: drop-shadow(1px 1px 1px black);
         }
