--- a/LESS/carousel.less
+++ b/LESS/carousel.less
@@ -2,13 +2,17 @@
     margin: 0 auto;
     width: 100%;
     .flex(center, center);
-    height: 500px;
+    height: 300px;
     position: relative;
     overflow: hidden;
     margin-top: 16px;
     @media(min-width: 1200px){
       width: 1200px;
     }
+    @media(min-width:800px){
+      height: 500px;
+    }
+
     .left-button, .right-button {
       .flex(center);
       color: white;
