--- a/LESS/footer.less
+++ b/LESS/footer.less
@@ -1,6 +1,6 @@
 .footer-content {
     background-color: @guidr-purp;
-    filter: drop-shadow(1px 1px 1px white);
+    filter: drop-shadow(1px 1px 1px black);
 
     nav{
         display: flex;
