--- a/CSS/index.css
+++ b/CSS/index.css
@@ -132,6 +132,72 @@ table {
   justify-content: space-between;
   background-color: #661FFF;
 }
+.header-content .nav-dropdown {
+  font-size: 1.8rem;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 20%;
+  filter: drop-shadow(1px 1px 1px #F5A623);
+}
+.header-content .nav-dropdown:hover {
+  color: #F5A623;
+  filter: drop-shadow(1px 1px 1px white);
+}
+.header-content .dropdown {
+  z-index: 2;
+  cursor: pointer;
+  margin-top: 20px;
+  margin-left: 10px;
+  width: 20%;
+}
+.header-content .dropdown .dropdown-button {
+  padding: 15px 20%;
+  justify-content: center;
+  width: 100%;
+  border: 3px solid #F5A623;
+  color: white;
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: #F5A623;
+}
+@media (min-width: 800px) {
+  .header-content .dropdown .dropdown-button {
+    font-size: 2rem;
+    padding: 15px 33%;
+  }
+}
+.header-content .dropdown .dropdown-button:hover {
+  background-color: white;
+  color: #F5A623;
+}
+.header-content .dropdown .dropdown-content {
+  width: 20%;
+  position: absolute;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+  border: 2.5px solid #F5A623;
+}
+.header-content .dropdown .dropdown-link {
+  width: 100%;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 18px;
+  text-decoration: none;
+  color: #F5A623;
+}
+.header-content .dropdown .dropdown-link:hover {
+  color: white;
+  background-color: #F5A623;
+}
+.header-content .dropdown .dropdown-hidden {
+  display: none;
+}
 .header-content div.header-left img {
   margin: 0 auto;
   height: 100px;
@@ -140,16 +206,21 @@ table {
 .header-content .header-right {
   display: flex;
   justify-content: space-between;
-  width: 25%;
+  width: 20%;
   font-size: 2rem;
   flex-wrap: wrap;
 }
 .header-content .header-right button {
   margin: 5px auto;
-  width: 75%;
+  width: 98%;
   height: 33%;
   border-radius: 5px;
-  font-size: 1.6rem;
+  font-size: 1.2rem;
+}
+@media (min-width: 800px) {
+  .header-content .header-right button {
+    font-size: 1.8rem;
+  }
 }
 .header-content .header-right .sign-in {
   background-color: white;
@@ -215,6 +286,9 @@ p {
 }
 .content-box {
   color: #4A4A4A;
+}
+html {
+  scroll-behavior: smooth;
 }
 .carousel {
   margin: 0 auto;
@@ -292,6 +366,10 @@ p {
 .body-content {
   height: auto;
 }
+.body-content .features {
+  padding: 2% 1%;
+  color: #F5A623;
+}
 .body-content .content-box {
   display: flex;
   width: 95%;
@@ -320,7 +398,12 @@ p {
   }
 }
 .body-content .content-box .content p {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
+}
+@media (min-width: 800px) {
+  .body-content .content-box .content p {
+    font-size: 1.6rem;
+  }
 }
 .body-content .content-box .body-img {
   height: 100%;
@@ -344,7 +427,7 @@ p {
 }
 .footer-content {
   background-color: #661FFF;
-  filter: drop-shadow(1px 1px 1px white);
+  filter: drop-shadow(1px 1px 1px black);
 }
 .footer-content nav {
   display: flex;
