--- a/LESS/header.less
+++ b/LESS/header.less
@@ -2,6 +2,77 @@
     display:flex;
     justify-content: space-between;
     background-color: @guidr-purp;
+
+    .nav-dropdown {
+        font-size: 1.8rem;
+        color: white;
+        .flex(center, center);
+        width: 20%;
+        filter: drop-shadow(1px 1px 1px @guidr-orange);
+        
+
+
+        &:hover {
+            color: @guidr-orange;
+            filter: drop-shadow(1px 1px 1px white);
+        }
+       
+    }
+
+    .dropdown {
+        z-index: 2;
+        width: 20%;
+        cursor: pointer;
+        margin-top: 20px;
+        margin-left:10px;
+        width:20%;
+        
+        
+        .dropdown-button {
+            padding: 15px 20%;
+            justify-content: center;
+          width:100%;
+
+          border: 3px solid @guidr-orange;
+          color: white;
+          font-size: 1.4rem;
+          font-weight: bold;
+          color: @guidr-orange;
+          @media (min-width: 800px) {
+              font-size:2rem;
+              padding: 15px 33%;
+          }
+          &:hover {
+            background-color: white;
+            color: @guidr-orange;
+          }
+        }
+        .dropdown-content {
+          width: 20%;
+          position: absolute;
+          background-color: white;
+          display: flex;
+          flex-direction: column;
+          align-items: center;  
+          margin-top: 10px;
+          border: 2.5px solid @guidr-orange;
+        }
+        .dropdown-link {
+          width: 100%;
+          text-align: center;
+          padding: 15px 0;
+          font-size: 18px;
+          text-decoration: none;
+          color: @guidr-orange;
+          &:hover {
+            color: white;
+            background-color: @guidr-orange;
+          }
+        }
+        .dropdown-hidden {
+          display: none;
+        }
+      }
     
    
     div.header-left {
@@ -18,7 +89,7 @@
         //sign-in/sign-up buttons
             display: flex;
             justify-content: space-between;
-            width: 25%;
+            width: 20%;
             font-size: 2rem;
             flex-wrap: wrap;
             
@@ -26,11 +97,13 @@
 
                 button {
                     margin: 5px auto;
-                    width: 75%;
+                    width: 98%;
                     height: 33%;
                     border-radius: 5px;
-                    font-size: 1.6rem;
-                    
+                    font-size: 1.2rem;
+                    @media(min-width: 800px){
+                        font-size: 1.8rem; 
+                       }
                 }
 
                 .sign-in {
