desktop mobile, and tablet complete for 'meet the team' page, still needs some styling

--- a/LESS/header.less
+++ b/LESS/header.less
@@ -1,7 +1,10 @@
 .header-content {
+    position: fixed;
+    width:100%;
     display:flex;
     justify-content: space-between;
     background-color: @guidr-purp;
+    z-index: 3;
 
     .nav-dropdown {
         font-size: 1.8rem;
