--- a/CSS/index.css
+++ b/CSS/index.css
@@ -128,9 +128,12 @@ table {
   border-spacing: 0;
 }
 .header-content {
+  position: fixed;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   background-color: #661FFF;
+  z-index: 3;
 }
 .header-content .nav-dropdown {
   font-size: 1.8rem;
@@ -357,6 +360,7 @@ html {
   transition: visibility 0s, opacity 0.5s linear;
 }
 .header-img {
+  padding-top: 100px;
   width: 100%;
   margin: 0 auto;
 }
@@ -459,7 +463,7 @@ html {
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  padding-top: 15px;
+  padding-top: 115px;
   width: 95%;
   align-content: center;
 }
@@ -470,14 +474,50 @@ html {
   border-top: 1px solid #661FFF;
   align-items: center;
 }
+@media (min-width: 800px) {
+  .body-content-meet .meet-box .scrum-UX-box {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+  }
+}
+@media (min-width: 800px) {
+  .body-content-meet .meet-box .UI-box {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+  }
+}
+@media (min-width: 800px) {
+  .body-content-meet .meet-box .front-box {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+  }
+}
+@media (min-width: 800px) {
+  .body-content-meet .meet-box .back-box {
+    display: flex;
+    justify-content: center;
+    width: 45%;
+    flex-wrap: wrap;
+    margin: 0 auto;
+  }
+}
 .body-content-meet .meet-box .meet-img {
   width: 250px;
   margin: 15px auto;
   height: 200px;
+  align-items: center;
 }
 .body-content-meet .meet-box .meet-img img {
   height: 100%;
   width: 100%;
+}
+@media screen and (min-width: 800px) and (max-width: 1050px) {
+  .body-content-meet .meet-box .meet-img {
+    width: 75%;
+  }
 }
 .body-content-meet .meet-box .scrum-UX-content,
 .body-content-meet .meet-box .UI-content,
@@ -485,6 +525,12 @@ html {
 .body-content-meet .meet-box .back-content {
   margin: 20px 20px;
   padding: 10px 10px;
+}
+@media (min-width: 800px) {
+  .body-content-meet .meet-box .scrum-UX-content {
+    margin: 0 auto;
+    width: 45%;
+  }
 }
 section {
   border: 1px solid red;
