--- a/LESS/body-content.less
+++ b/LESS/body-content.less
@@ -15,6 +15,10 @@
     .features {
         padding: 2% 1%;
         color: @guidr-orange;
+
+        h2 {
+            padding-left: 2.5%;
+        }
         
     }
     .content-box {
@@ -25,7 +29,7 @@
         flex-wrap: wrap;
         margin: 0 auto;
         padding: 5% 5%;
-        border-top: 1px solid @guidr-gray;
+        border-top: 1px solid @guidr-pink;
         font-size: 1rem;
         
         
