--- a/LESS/meet-the-team.less
+++ b/LESS/meet-the-team.less
@@ -10,7 +10,7 @@
         width: 100%;
         flex-wrap:wrap;
         padding: 2%;
-        border-top:1px solid @guidr-purp;
+        border-top:1px solid @guidr-pink;
         align-items: center;
 
         .scrum-UX-box {
