--- a/CSS/index.css
+++ b/CSS/index.css
@@ -397,14 +397,9 @@ html {
 }
 .body-content .content-box .content {
   width: 90%;
-  border: 1px solid #BD10E0;
   border-radius: 10px;
   padding: 3%;
-}
-@media (min-width: 800px) {
-  .body-content .content-box .content {
-    width: 45%;
-  }
+  box-shadow: 0px 0px 10px 0px #661FFF;
 }
 .body-content .content-box .content h3 {
   font-weight: bold;
@@ -415,6 +410,11 @@ html {
 @media (min-width: 800px) {
   .body-content .content-box .content p {
     font-size: 1.6rem;
+  }
+}
+@media (min-width: 800px) {
+  .body-content .content-box .content {
+    width: 45%;
   }
 }
 .body-content .content-box .body-img {
@@ -566,6 +566,8 @@ html {
 .body-content-meet .meet-box .back-content {
   margin: 20px 20px;
   padding: 10px 10px;
+  box-shadow: 0px 0px 10px 0px #661FFF;
+  border-radius: 10px;
 }
 @media (min-width: 800px) {
   .body-content-meet .meet-box .scrum-UX-content {
