--- a/LESS/meet-the-team.less
+++ b/LESS/meet-the-team.less
@@ -114,6 +114,8 @@
         .scrum-UX-content, .UI-content, .front-content, .back-content  {
             margin: 20px 20px;
             padding: 10px 10px;
+            box-shadow:0px 0px 10px 0px @guidr-purp;
+            border-radius: 10px;
              
         }
 
