--- a/LESS/meet-the-team.less
+++ b/LESS/meet-the-team.less
@@ -26,10 +26,12 @@
         h2 {
             font-weight: bold;
             color: @guidr-purp;
+            
         }
 
         h4 {
-            color: @guidr-black;
+            color: @guidr-orange;
+            font-weight: bold;
         }
 
         .git-linkedin-nav {
