--- a/CSS/index.css
+++ b/CSS/index.css
@@ -212,12 +212,13 @@ table {
   justify-content: space-between;
   width: 20%;
   font-size: 2rem;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  align-items: center;
 }
 .header-content .header-right button {
   margin: 5px auto;
-  width: 98%;
-  height: 33%;
+  width: 45%;
+  height: 50%;
   border-radius: 5px;
   font-size: 1.2rem;
 }
