--- a/LESS/header.less
+++ b/LESS/header.less
@@ -95,14 +95,15 @@
             justify-content: space-between;
             width: 20%;
             font-size: 2rem;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
+            align-items: center;
             
             
 
                 button {
                     margin: 5px auto;
-                    width: 98%;
-                    height: 33%;
+                    width: 45%;
+                    height: 50%;
                     border-radius: 5px;
                     font-size: 1.2rem;
                     @media(min-width: 800px){
